# webcface-python

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  webcface.canvas2d.html  webcface.canvas2d_base.html  webcface.canvas3d.html  webcface.canvas3d_base.html  webcface.client.html  webcface.client_data.html  webcface.client_impl.html  webcface.components.html  webcface.field.html  webcface.func.html  webcface.func_info.html  webcface.func_listener.html  webcface.geometries.html  webcface.html  webcface.image.html  webcface.image_frame.html  webcface.log.html  webcface.log_handler.html  webcface.member.html  webcface.message.html  webcface.temporal_component.html  webcface.text.html  webcface.transform.html  webcface.transform_impl.html  webcface.typing.html  webcface.value.html  webcface.view.html  webcface.view_base.html  (+1 more)
.doctrees/: environment.pickle  index.doctree  modules.doctree  webcface.canvas2d.doctree  webcface.canvas2d_base.doctree  webcface.canvas3d.doctree  webcface.canvas3d_base.doctree  webcface.client.doctree  webcface.client_data.doctree  webcface.client_impl.doctree  webcface.components.doctree  webcface.doctree  webcface.field.doctree  webcface.func.doctree  webcface.func_info.doctree  webcface.func_listener.doctree  webcface.geometries.doctree  webcface.image.doctree  webcface.image_frame.doctree  webcface.log.doctree  webcface.log_handler.doctree  webcface.member.doctree  webcface.message.doctree  webcface.temporal_component.doctree  (+8 more)
(+112 files in other folders)
