[tool.poetry]
name = "webcface"
version = "1.0.0"
description = "WebCFace Client for Python"
authors = ["na-trium-144 <100704180+na-trium-144@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^1.6.4"
msgpack = "^1.0.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
